# R-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  benchmark_visualizer.py  build.ps1  build.sh
.github/: README.md
assets/shaders/postprocessing/: bloom.frag  blur.frag  contrast.frag  cross_hatching.frag  cross_stitching.frag  deuteranopia.frag  dream_vision.frag  fisheye.frag  grayscale.frag  pixelizer.frag  posterization.frag  predator.frag  protanopia.frag  scanlines.frag  sobel.frag  tritanopia.frag
cmake/: 1_Options.cmake  3_External.cmake  4_Sources.cmake  5_Warnings.cmake  6_Linker.cmake  7_Target.cmake  8_UnitTests.cmake
docs/: FIX-I18N.md  QUICKSTART.md  README.md  TRANSLATION_GUIDE.md  docusaurus.config.ts  index.html  index_backup.html  make_bilingual.py  package-lock.json  script.js  sidebars.ts  style.css  translate_complete.py  translate_core_concepts.py  translate_docs.py  translate_rem.py  translations.js
docs/docs/: architecture.md  intro.md  storage.md
docs/docs/advanced/: events.md  hierarchies.md  index.md  run-conditions.md  schedules.md
docs/docs/api/: commands.md  entity-commands.md  events.md  index.md  query.md  scene.md
docs/docs/core-concepts/: commands.md  components.md  entities.md  index.md  queries.md  resources.md  systems.md
docs/docs/examples/: bouncing-balls.md  event-communication.md  index.md  system-hierarchy.md
examples/: Main.cpp
examples/audio_example/: Main.cpp
examples/benchmarks/: Main.cpp
examples/bouncing_balls/: Main.cpp
examples/conditional_systems/: Main.cpp
examples/event_writer_reader/: Main.cpp
examples/lua_game/: Main.cpp
examples/main_menu/: Main.cpp
examples/network-plugin_test/: Main.cpp
examples/pause_menu/: Main.cpp
examples/post_fx/: Main.cpp
examples/r_type/: Main.cpp
examples/settings_menu/: Main.cpp
examples/shader_mesh/: Game.hpp  Main.cpp
examples/simple_mesh/: Main.cpp
examples/simple_shape/: Main.cpp
examples/states_example/: Main.cpp
examples/system_hierarchy/: Main.cpp
examples/system_scheduler/: Main.cpp
examples/system_sets/: Main.cpp
examples/ui_demo/: Main.cpp
include/R-Engine/: Application.hpp  Application.inl  R-EngineExport.hpp  Types.hpp
src/: Application.cpp  Main.cpp
src/Components/: Material3d.cpp  Shader.cpp  Transform3d.cpp
src/Core/: BitMask.cpp  Clock.cpp  Logger.cpp  ThreadPool.cpp
src/ECS/: Command.cpp  Entity.cpp  Resolver.cpp  Scene.cpp  Storage.cpp  System.cpp
src/Maths/: Transform.cpp
src/Mesh/: MeshData.cpp  MeshVertex.cpp
src/Plugins/: DefaultPlugins.cpp  InputPlugin.cpp  MeshPlugin.cpp  Plugin.cpp  RenderPlugin.cpp  TransformPlugin.cpp  UIPlugin.cpp  WindowPlugin.cpp
src/Scripts/: Lua.cpp  LuaApiRegistry.cpp  LuaStackGuard.cpp
src/Systems/: Scheduler.cpp  States.cpp  SystemNode.cpp
tests/: NetworkPluginConnectionTests.cpp  NetworkPluginIntegrationTests.cpp  NetworkPluginLoadAndCrossPlatformTests.cpp  NetworkPluginTests.cpp  Test.hpp
tests/Assets/: Test_AssetEvents.cpp  Test_Assets.cpp  Test_Handle.cpp
tests/Core/: Test_Clock.cpp  Test_Error.cpp  Test_Logger.cpp  Test_Scheduler.cpp
tests/ECS/: Test_Commands.cpp  Test_Query.cpp  Test_Resolver.cpp
tests/Maths/: Test_Mat.cpp  Test_Vec.cpp
tests/Plugins/: Test_Plugins.cpp
(+192 files in other folders)
